--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-torch==2.5.1
+--extra-index-url https://download.pytorch.org/whl/cu126
+torch==2.8.0+cu126
 transformers==4.56.1
 tokenizers==0.22.0
 datasets==3.1.0
+accelerate==1.10.1
+triton==3.4.0
+matplotlib==3.10.0
